# 2-component-micro

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Single_vortex.ipynb  Vortex_cluster.ipynb  conanfile.txt  data_plot.ipynb  out.txt  plotNoteboox.ipynb  plotNoteboox_compare.ipynb  plotSpanNotebook.ipynb  profiler.sh  run_single.py  run_single_tune.py  run_span.py
cmake/: CompilerFlags.cmake  PrintBuildInfo.cmake  PrintTargetInfo.cmake  SetupDependencies.cmake
cmake/conan_dependency_provider/: conan_support.cmake
math/: BdG_2d.nb  polynomials.nb
postProcessing/: importData.py  importDataS.py
source_code/: argparser.cu  argparser.h  chebyshev_self_consistent.cu  chebyshev_self_consistent.h  complex_cuda.h  cuda_reduction.cu  cuda_reduction.h  field_types.h  initialization.cu  initialization.h  io.cpp  io.h  main.cu  utilities.cu  utilities.h
